--- a/.github/workflows/sync-tag.yml
+++ b/.github/workflows/sync-tag.yml
@@ -17,6 +17,7 @@ jobs:
         uses: benc-uk/workflow-dispatch@v1
         with:
           workflow: sync-tag.yml
+          ref: main
           repo: ${{ secrets.UPSTREAM_REPO }}
           token: ${{ secrets.NC_GITHUB_TOKEN }}
           inputs: '{ "tag": "${{ github.ref_name }}" }'
