--- a/.github/workflows/android-build-validation.yml
+++ b/.github/workflows/android-build-validation.yml
@@ -21,14 +21,14 @@ jobs:
         with:
           go-version: "1.21.x"
       - name: Setup Android SDK
-        uses: android-actions/setup-android@v2
-
+        uses: android-actions/setup-android@v3
+        with:
+          cmdline-tools-version: 8512546
       - name: Setup Java
         uses: actions/setup-java@v3
         with:
-          java-version: "8"
+          java-version: "11"
           distribution: "adopt"
-
       - name: NDK Cache
         id: ndk-cache
         uses: actions/cache@v3
@@ -36,7 +36,7 @@ jobs:
           path: /usr/local/lib/android/sdk/ndk
           key: ndk-cache-23.1.7779620
       - name: Setup NDK
-        run: /usr/local/lib/android/sdk/tools/bin/sdkmanager --install "ndk;23.1.7779620"
+        run: /usr/local/lib/android/sdk/cmdline-tools/7.0/bin/sdkmanager --install "ndk;23.1.7779620"
       - name: install gomobile
         run: go install golang.org/x/mobile/cmd/gomobile@v0.0.0-20230531173138-3c911d8e3eda
       - name: gomobile init
